Navigation alignment fix

--- a/style.css
+++ b/style.css
@@ -782,28 +782,35 @@ nav{
   width: 100%;
 }
 
-
-
-
 #myLinks{
   display: none;
   width: 100%;
 }
 
+.right-nav .bottom-section ul{
+  padding: 0 0 0 0;
+}
 
+.right-nav .bottom-section ul li{
+  border-bottom: 1px solid white;
+  padding: 12px 0;
+  margin: 0;
+}
 
+.right-nav .bottom-section ul li:first-child{
+  border-top: 1px solid white;
+}
 
 .right-nav .bottom-section ul a{
-  color: white;
+  margin: 0;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
   display: block;
-  border-bottom: 1px solid white;
   width: 100%;
 }
 
-.right-nav .bottom-section ul a:hover{
+.right-nav .bottom-section ul li:hover{
   background-color: #ddd;
   color: black;
 }
